media query added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <article></article>
       <section>
         <div>
-          <img src="images\pattern-divider-desktop.svg" alt="separator" />
+          <img class="desktop" src="images\pattern-divider-desktop.svg" alt="separator" />
+          <img class="mobile" src="images\pattern-divider-mobile.svg" alt="separator-mobile" />
         </div>
         <figure>
           <img src="images\icon-dice.svg" alt="dice" />
