--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
     <title>Advice-For the day</title>
   </head>
   <body>
-    <main class="box">
-      <h5>ADVICE #<span></span></h5>
-      <article></article>
-      <section>
-        <div>
-          <img class="desktop" src="images\pattern-divider-desktop.svg" alt="separator" />
-          <img class="mobile" src="images\pattern-divider-mobile.svg" alt="separator-mobile" />
-        </div>
-        <figure>
-          <img src="images\icon-dice.svg" alt="dice" />
-        </figure>
-      </section>
-    </main>
+    <div id="flex-container">
+      <main class="box">
+        <h5>ADVICE #<span></span></h5>
+        <article></article>
+        <section>
+          <div>
+            <img class="desktop" src="images\pattern-divider-desktop.svg" alt="separator" />
+            <img class="mobile" src="images\pattern-divider-mobile.svg" alt="separator-mobile" />
+          </div>
+          <figure>
+            <img src="images\icon-dice.svg" alt="dice" />
+          </figure>
+        </section>
+      </main>
+    </div>
     <script src="advice.js"></script>
     <script src="index.js"></script>
   </body>
